# pet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yaml  tests.yaml
src/pet/: __init__.py  __main__.py  cli.py  utils.py
tests/: test_pet.py
