[project]
name = "pet"
version = "0.1.0"
description = "A virtual pet that lives on the command line and is remembered between terminal sessions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Matt Dray", email = "mwdray+pet@gmail.com" }
]
dependencies = [
    "InquirerPy>=0.3.4",
    "platformdirs>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
pet = "pet.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"